--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -36,7 +36,9 @@ jobs:
           node-version: lts/*
           cache: 'npm'
       - name: Prevent Legacy SSL Error
-        run: echo "NODE_OPTIONS=--openssl-legacy-provider" >> $GITHUB_ENV
+        run: |
+          NODE_OPTIONS="--openssl-legacy-provider"
+          echo "NODE_OPTIONS=${NODE_OPTIONS}" >> $GITHUB_ENV
       - name: Install dependencies
         run: npm ci
       - name: Build
