--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -35,14 +35,12 @@ jobs:
         with:
           node-version: lts/*
           cache: 'npm'
-      - name: Prevent Legacy SSL Error
-        run: |
-          NODE_OPTIONS="--openssl-legacy-provider"
-          echo "NODE_OPTIONS=${NODE_OPTIONS}" >> $GITHUB_ENV
       - name: Install dependencies
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          NODE_OPTIONS: '--openssl-legacy-provider'
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
